--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    color: #222;
+    margin: 0;
+    padding: 0;
+    background-color: #729396;  /*  */
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header {
