--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background: #729396;
+    background: #ffffff;
     border-bottom: 1px solid #eee;
     padding: 10px 0;
 }
