--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ nav {
 }
 
 .slide img {
-    width: 1000vw;
-    height: 1000vw;
+    width: 1226px;
+    height: 920px;
     object-fit: cover;
 }
 
