--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ nav {
 .slide img {
     width: 1226px;
     height: 920px;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
 @keyframes slide {
