--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ nav {
 }
 
 .slide img {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 400px;
     object-fit: contain; /* show full image */
 }
 
